Wrap <dl> contents and avoid breaking columns inside (#13705)
* Wrap <dl> contents and avoid breaking columns inside

An alternative would have been to set break-after: avoid(-column)
on the <dt> but that's not supported by Firefox yet.

--- a/src/amo/components/DefinitionList/styles.scss
+++ b/src/amo/components/DefinitionList/styles.scss
@@ -9,6 +9,10 @@
     margin: 0;
     padding: 0;
   }
+
+  div {
+    break-inside: avoid;
+  }
 }
 
 .Definition-dt {
